<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="desc_neighbour_image_profile">Neighbour Profile Image</string>
    <string name="desc_favorite_neighbour">Add or remove neightbour from favorites</string>
    <string name="desc_neighbour_location">Neighbour Location</string>
    <string name="desc_neighbour_network">Neighbour network</string>
    <string name="desc_neighbour_call">Neighbour network</string>
    <string name="text_about">About me</string>
    <string name="text_social_network_placeholder" translatable="false">www.facebook.fr/caroline</string>
    <string name="desc_add_neighbour">Add a new neighbour</string>
</resources>
